# libtorch_owndata

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: csv2vector.hpp  owndata.hpp
src/: csv2vector.cpp  owndata.cpp
